[package]
name = "async_static"
version = "0.1.2"
authors = ["liangyongrui <leungyongrui@gmail.com>"]
edition = "2018"
keywords = ['async', 'lazy_static']
description = 'A macro for declaring async lazily evaluated statics in Rust.'
homepage = 'https://github.com/liangyongrui/async_static'
repository = 'https://github.com/liangyongrui/async_static'
readme = 'readme.md'
license = 'MIT OR Apache-2.0'

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = { version = "1", features = ["nightly"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = "1"
